--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ environment {
       scannerHome = tool 'valaxy-sonar-scanner'
     }
     steps{ 
-    withSonarQubeEnv('sonarqube-server') { // If you have configured more than one global server connection, you can specify its name
+    withSonarQubeEnv('valaxy-sonarqube-server') { // If you have configured more than one global server connection, you can specify its name
       sh "${scannerHome}/bin/sonar-scanner"
     }
     }
